syntax = "proto3";
package order;

message GetOrderRequest {
  int64 user_id = 1;
  int64 page = 2;
  int64 page_size = 3;
}

message Order {
  int64 user_id = 1;
  int32 items_id = 2;
  int32 price = 3;
  int32 count = 4;
  string currency = 5;
  string description = 6;
}

message GetOrderRespone {
  repeated Order orders = 1;
}

message AddOrderRequest {
  int64 user_id = 1;
  int32 items_id = 2;
  int32 price = 3;
  int32 count = 4;
  string currency = 5;
  string description = 6;
  int64 token = 7;
}

message AddOrderRespone {
   int32 result = 1; 
  }

service OrderService {
  rpc getOrders(GetOrderRequest) returns (GetOrderRespone);
  rpc addOrder(AddOrderRequest) returns (AddOrderRespone);
}